Changing the font to Antic Slab

--- a/app/assets/stylesheets/themes/rightly.css.scss
+++ b/app/assets/stylesheets/themes/rightly.css.scss
@@ -21,14 +21,14 @@ html {
 }
 
 body, textarea, pre, input {
-  font-family: 'freight-sans-pro', Helvetica, Arial, sans-serif;
+  font-family: 'Antic Slab', serif;
   font-size: 2.0rem;
   line-height: $line-height;
   background: $body-bg;
 }
 
 h1, h2, h3, h4, #text-title * {
-  font-family: 'adelle', Helvetica, Arial, sans-serif;
+  font-family: 'Antic Slab', sans-serif;
   line-height: 1.2em;
   margin: 1em 0;
   font-weight: normal;
