--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,7 +7,7 @@ html lang="en-US"
     = stylesheet_link_tag 'application'
     meta content=INFO['name'] name="author"
     link href="#{rss_path}" rel="alternate" title="RSS" type="application/rss+xml"
-    link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,900' rel='stylesheet' type='text/css'
+    link href='http://fonts.googleapis.com/css?family=Antic+Slab' rel='stylesheet' type='text/css'
     = javascript_include_tag 'application'
     = render partial: 'application/typekit'
   body class="#{controller_name} #{action_name} #{logged_in? ? '' : 'not-'}logged-in #{no_users? ? 'no-users' : ''}"
