--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -27,6 +27,8 @@ html lang="en-US"
             ul#connect.clearfix
               - if INFO['twitter']
                 li= link_to "@#{INFO['twitter']}", "http://twitter.com/#{INFO['twitter']}", class: 'icon-twitter', id: 'connect-twitter'
+              - if INFO['linkedin']
+                li= link_to 'linkedin', "https://linkedin.com/in/#{INFO['linkedin']}", class: 'icon-linkedin', id: 'connect-linkedin'
               - if INFO['github']
                 li= link_to 'github', "https://github.com/#{INFO['github']}", class: 'icon-github', id: 'connect-github'
               - if INFO['email']
