Want all the circles to show up at the beginning

--- a/app/assets/stylesheets/single_post/carousel.css
+++ b/app/assets/stylesheets/single_post/carousel.css
@@ -137,7 +137,7 @@ a:hover, a:focus {
 }
 
 .bullet {
-	background: url(../images/page-off.png) center center no-repeat;
+	background: url(../carousel/page-off.png) center center no-repeat;
 	display: block;
 	width: 18px;
 	height: 18px;
