--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -7,3 +7,5 @@
 nav.history.clearfix
   = link_to "#{@next.title}".html_safe, @next, class: 'next' if @next
   = link_to "#{@previous.title}".html_safe, @previous, class: 'prev' if @previous
+
+= render 'disclaimer'
