--- a/app/assets/stylesheets/themes/rightly.css.scss
+++ b/app/assets/stylesheets/themes/rightly.css.scss
@@ -221,7 +221,7 @@ header {
     border-top: none;
     padding-top: 0;
     margin: 4em 0;
-    color: rgba(0,0,0,0.6);
+    color: $theme-light;
     font-size: 1.8rem;
 
     &:before {
