--- a/app/assets/stylesheets/themes/rightly.css.scss
+++ b/app/assets/stylesheets/themes/rightly.css.scss
@@ -31,11 +31,18 @@ h1, h2, h3, h4, #text-title * {
   font-family: 'Antic Slab', sans-serif;
   line-height: 1.2em;
   margin: 1em 0;
-  font-weight: normal;
 
   a:hover {
     color: $theme;
   }
+}
+
+h1 {
+  font-weight: normal;
+}
+
+h2, h3, h4 {
+  font-weight: bold;
 }
 
 #text-title,
