--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -6,6 +6,7 @@ html lang="en-US"
     = csrf_meta_tag
     = stylesheet_link_tag 'application'
     meta content=INFO['name'] name="author"
+    meta description="Laura is the CEO and Founder of healthtech startup Additive Analytics. She writes about startups, technology, software development, digital marketing, and analytics."
     link href="#{rss_path}" rel="alternate" title="RSS" type="application/rss+xml"
     link href='http://fonts.googleapis.com/css?family=Antic+Slab' rel='stylesheet' type='text/css'
     = javascript_include_tag 'application'
