--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,8 +5,8 @@ html lang="en-US"
     title= html_title yield(:title).html_safe
     = csrf_meta_tag
     = stylesheet_link_tag 'application'
-    meta content=INFO['name'] name="author"
-    meta description="Laura is the CEO and Founder of healthtech startup Additive Analytics. She writes about startups, technology, software development, digital marketing, and analytics."
+    meta name="author" content=INFO['name']
+    meta name="description" content="Laura is the CEO and Founder of healthtech startup Additive Analytics. She writes about startups, technology, software development, digital marketing, and analytics."
     link href="#{rss_path}" rel="alternate" title="RSS" type="application/rss+xml"
     link href='http://fonts.googleapis.com/css?family=Antic+Slab' rel='stylesheet' type='text/css'
     = javascript_include_tag 'application'
