Changing the font to Raleway

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,7 +8,7 @@ html lang="en-US"
     meta name="author" content=INFO['name']
     meta name="description" content="Laura is the CEO and Founder of healthtech startup Additive Analytics. She writes about startups, technology, software development, digital marketing, and analytics."
     link href="#{rss_path}" rel="alternate" title="RSS" type="application/rss+xml"
-    link href='http://fonts.googleapis.com/css?family=Antic+Slab' rel='stylesheet' type='text/css'
+    link href='http://fonts.googleapis.com/css?family=Raleway:300' rel='stylesheet' type='text/css'
     = javascript_include_tag 'application'
   body class="#{controller_name} #{action_name} #{logged_in? ? '' : 'not-'}logged-in #{no_users? ? 'no-users' : ''}"
     #sheet
