Fixing the link color in the timeline

--- a/app/assets/stylesheets/base/timeline.css.scss
+++ b/app/assets/stylesheets/base/timeline.css.scss
@@ -71,6 +71,10 @@
     position: relative;
     border-radius: 5px;
 }
+
+.cbp_tmtimeline a {
+  color: #fff;
+}
  
 .cbp_tmtimeline > li:nth-child(odd) .cbp_tmlabel {
     background: #6cbfee;
