CSS changes to make the table look nice

--- a/app/assets/stylesheets/color_schemes/nate-yellow.css.scss
+++ b/app/assets/stylesheets/color_schemes/nate-yellow.css.scss
@@ -14,3 +14,5 @@ $selection-bg: $theme;
 $selection-color: #fff;
 
 $underline-color: lighten($theme, 70%);
+
+$table-border-color: lighten($theme, 70%);
