--- a/app/assets/stylesheets/themes/rightly.css.scss
+++ b/app/assets/stylesheets/themes/rightly.css.scss
@@ -66,6 +66,10 @@ h3 {
   color: rgba(0,0,0,0.8);
 }
 
+th {
+    font-weight: bold;
+  }
+
 disclaimer {
   display: block;
   font-size: 1rem;
@@ -195,6 +199,11 @@ header {
 }
 
 #body {
+  table, th, td { 
+    padding: 15px;
+    border-bottom: 1px solid $table-border-color;
+  }
+
   footer {
     display: block;
     font-size: 1.6rem;
@@ -368,4 +377,3 @@ only screen and (-webkit-min-device-pixel-ratio: 2) {
     display: none;
   }
 }
-
