--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,7 +7,7 @@ html lang="en-US"
     = stylesheet_link_tag 'application'
     meta name="author" content=INFO['name']
     link href="#{rss_path}" rel="alternate" title="RSS" type="application/rss+xml"
-    link href='http://fonts.googleapis.com/css?family=Raleway:300' rel='stylesheet' type='text/css'
+    link href='//fonts.googleapis.com/css?family=Raleway:300' rel='stylesheet' type='text/css'
     = javascript_include_tag 'application'
   body class="#{controller_name} #{action_name} #{logged_in? ? '' : 'not-'}logged-in #{no_users? ? 'no-users' : ''}"
     #sheet
