Adding a link to hired.com to try to make some money

--- a/app/views/posts/_signature.html.slim
+++ b/app/views/posts/_signature.html.slim
@@ -3,3 +3,8 @@ aside.signature
   = link_to 'Twitter', "http://twitter.com/#{INFO['twitter']}"
   |  or subscribe to 
   = link_to 'RSS', rss_path
+  br
+  br
+  | Are you a developer or data scientist? Sign up at 
+  = link_to 'Hired.com', 'http://join.hired.com/x/WZNgsr'
+  |  and get 5 to 15 real job offers from 700+ top companies in one week.
