Making the hired link nofollow so I don't draw Google's ire

--- a/app/views/posts/_signature.html.slim
+++ b/app/views/posts/_signature.html.slim
@@ -6,5 +6,5 @@ aside.signature
   br
   br
   | Are you a developer or data scientist? Sign up at 
-  = link_to 'Hired.com', 'http://join.hired.com/x/WZNgsr'
+  = link_to 'Hired.com', 'http://join.hired.com/x/WZNgsr', {rel: 'nofollow'}
   |  and get 5 to 15 real job offers from 700+ top companies in one week.
